syntax = "proto3";
package dymensionxyz.dymension.rollapp;

import "gogoproto/gogo.proto";
import "dymension/rollapp/params.proto";
import "dymension/rollapp/rollapp.proto";
import "dymension/rollapp/state_info.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/dymensionxyz/dymension/v3/x/rollapp/types";

// GenesisState defines the rollapp module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated Rollapp rollappList = 2 [(gogoproto.nullable) = false];
  repeated StateInfo stateInfoList = 3 [(gogoproto.nullable) = false];
  repeated StateInfoIndex latestStateInfoIndexList = 4 [(gogoproto.nullable) = false];
  repeated StateInfoIndex latestFinalizedStateIndexList = 5 [(gogoproto.nullable) = false];
  repeated BlockHeightToFinalizationQueue blockHeightToFinalizationQueueList = 6 [(gogoproto.nullable) = false];

  // The total number of incoming ibc transfers to be fast tracked in the genesis transfer period
  uint64 numGenesisTransfers = 7;
  // The indexes of genesis transfers received thus far during the genesis transfer period
  // This cannot be implemented on the rollapp type, because we index into this like a map, but the rollapp is read/writ as a whole
  repeated uint64 genesisTransfersReceived = 8;
  // this line is used by starport scaffolding # genesis/proto/state
}
