syntax = "proto3";
package dymensionxyz.dymension.rollapp;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/dymensionxyz/dymension/v3/x/rollapp/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;
  
  // dispute_period_in_blocks the number of blocks it takes
  // to change a status of a state from received to finalized.
  // during that period, any user could submit fraud proof
  uint64 dispute_period_in_blocks = 1
      [ (gogoproto.moretags) = "yaml:\"dispute_period_in_blocks\"" ];

  // alias_fee_table is a map of alias to pricing table, which is a map of character length to price.
  map<string, cosmos.base.v1beta1.Coin> alias_fee_table = 3
      [ (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"alias_fee_table\"" ];
}
